Restrict datapack logic to DarkWither-tagged withers, End Portal pillar
Updated all wither-related functions in the datapack to only target withers with the 'DarkWither' tag, improving compatibility and preventing unintended effects on non-DarkWither entities. This change ensures that datapack mechanics, effects, and event handling are isolated to the intended custom wither variant.