@@ -9,6 +9,7 @@ import voiidstudios.vct.configs.model.CustomConfig;
 
 import java.io.OutputStreamWriter;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.time.Duration;
@@ -316,7 +317,8 @@ public class HalloweenModeManager {
 
         plugin.getServer().getScheduler().runTaskAsynchronously(plugin, () -> {
             try {
-                URL url = new URL(resolvedUrl);
+                URI webhookUri = URI.create(resolvedUrl.trim());
+                URL url = webhookUri.toURL();
                 HttpURLConnection connection = (HttpURLConnection) url.openConnection();
                 connection.setRequestMethod("POST");
                 connection.setRequestProperty("Content-Type", "application/json");
